site layout added - final feature

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="hero.html" class="link">Hero</a></li>
         <li><a href="cards.html" class="link">Cards</a></li>
         <li><a href="tiles.html" class="link">Tiles</a></li>
-        <li><a href="layouts.html" class="link">Layout</a></li>
+        <li><a href="layout.html" class="link">Layout</a></li>
       </ul>
     </nav>
   </body>
